# pytesting-cicd

./: .coverage  .pre-commit-config.yaml  .python-version  README.md  pyproject.toml
.github/workflows/: test.yaml
src/pytesting_cicd/: __init__.py  functions.py  script.py
tests/integration_tests/: test_integration.py
tests/unit_tests/: test_unit.py
